--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<title>CATS</title>
 </head>
 <body>
-	
+	<div class="image-container">
+		<div class="image-card">
+			<h2 id="card-title" class="title">Title of image goes here</h2>
+		</div>
+	</div>
 </body>
 </html>
