--- a/index.html
+++ b/index.html
@@ -14,6 +14,49 @@
 	<div class="image-container">
 		<div class="image-card">
 			<h2 id="card-title" class="title">Title of image goes here</h2>
+			<div class="slider">
+				<div class="slides">
+					<input type="radio" name="radio-btn" id="radio1">
+					<input type="radio" name="radio-btn" id="radio2">
+					<input type="radio" name="radio-btn" id="radio3">
+					<input type="radio" name="radio-btn" id="radio4">
+					<input type="radio" name="radio-btn" id="radio5">
+					<div class="slide first">
+						<img src="" class="image" id="card-image">
+					</div>
+					<div class="slide">
+						<img src="" class="image" id="card-image1">
+					</div>
+					<div class="slide">
+						<img src="" class="image" id="card-image2">
+					</div>
+					<div class="slide">
+						<img src="" class="image" id="card-image3">
+					</div>
+					<div class="slide">
+						<img src="" class="image" id="card-image4">
+					</div>
+					<!-- automatic navigatio -->
+					<div class="navigation-auto">
+						<div class="auto1"></div>
+						<div class="auto2"></div>
+						<div class="auto3"></div>
+						<div class="auto4"></div>
+						<div class="auto5"></div>
+					</div>
+				</div>
+				<!-- manual navigaton -->
+				<div class="manual-navigation">
+					<label for="radio1" class="manual-btn"></label>
+					<label for="radio2" class="manual-btn"></label>
+					<label for="radio3" class="manual-btn"></label>
+					<label for="radio4" class="manual-btn"></label>
+					<label for="radio5" class="manual-btn"></label>
+
+
+				</div>
+			</div>
+			
 		</div>
 	</div>
 </body>
