--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
 	<div class="image-container">
 		<div class="image-card">
+			<!-- title area -->
 			<h2 id="card-title" class="title">Title of image goes here</h2>
+
+			<!-- image slides,manual and automatic -->
 			<div class="slider">
 				<div class="slides">
 					<input type="radio" name="radio-btn" id="radio1">
@@ -56,7 +59,11 @@
 
 				</div>
 			</div>
-			
+			<!-- like section -->
+			<div class="likes-section">
+				<span id="like-count" class="likes">0 likes</span>
+				<button id="like-button" class="like-button">👍</button>
+			</div>
 		</div>
 	</div>
 </body>
