--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
 				<span id="like-count" class="likes">0 likes</span>
 				<button id="like-button" class="like-button">👍</button>
 			</div>
+			<!-- fact-list -->
+			<div class="container">
+				<ul id="Fact-list" class="list-group">
+					<li>fun fact 1</li>
+					<li>fun fact 2</li>
+					<li>Fun fact 2</li>
+				</ul>
+			</div>
+			
 		</div>
 	</div>
 </body>
