--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 					<li>Fun fact 2</li>
 				</ul>
 			</div>
+			<!-- fact input section -->
+			<form id="fact-form" class="fact-form">
+				<input required class="comment-input" type="text" name="comment" id="comment"
+					placeholder="Add a Funfact" />
+				<button class="submit-button" type="submit">submit</button>
+			</form>
 			
 		</div>
 	</div>
