--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
 			<form id="fact-form" class="fact-form">
 				<input required class="comment-input" type="text" name="comment" id="comment"
 					placeholder="Add a Funfact" />
+					<!-- submit button -->
 				<button class="submit-button" type="submit">submit</button>
 			</form>
-			
 		</div>
 	</div>
+	<!-- linking js file -->
+	<script defer type="text/javascript" src="index.js"></script>
 </body>
 </html>
