readme,added_facts,added style

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<title>CATS</title>
 </head>
 <body>
+	<img class="background-image" id="background-image" src="" alt="">
 	<div class="image-container">
 		<div class="image-card">
 			<!-- title area -->
@@ -39,7 +40,7 @@
 					<div class="slide">
 						<img src="" class="image" id="card-image4">
 					</div>
-					<!-- automatic navigatio -->
+					<!-- automatic navigation -->
 					<div class="navigation-auto">
 						<div class="auto1"></div>
 						<div class="auto2"></div>
