--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>CATS</title>
 </head>
 <body>
-	<img class="background-image" id="background-image" src="" alt="">
+	<div class="background-image" id="background-image">
 	<div class="image-container">
 		<div class="image-card">
 			<!-- title area -->
@@ -82,6 +82,7 @@
 			</form>
 		</div>
 	</div>
+</div>
 	<!-- linking js file -->
 	<script defer type="text/javascript" src="index.js"></script>
 </body>
